--- a/projects/swbs/docs.html
+++ b/projects/swbs/docs.html
@@ -3,13 +3,12 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Documentation for Raspbot Project.">
-        <meta name="keywords" content="perpetualCreations, dreamerslegacy, dreamer's legacy, dreamerslegacy.xyz, socket wrapper, socket wrapper python, socket wrapper for byte strings, swbs, swbs docs, swbs documentation">
+        <meta name="description" content="Documentation for SWBS Project.">
         <meta name="author" content="perpetualCreations">
         <title>SWBS Documentation</title>
         <link rel="preload" href="/css/newline.min.css" as="style">
         <link rel="preload" href="/css/schema.min.css" as="style">
-        <link rel="preload" href="/projects/swbs/icon-upscaled.png" as="image">
+        <link rel="preload" href="/projects/swbs/icon-upscaled-old.png" as="image">
         <link rel="icon" href="/resources/favicon.ico">
         <link rel="stylesheet" type="text/css" href="/css/newline.min.css">
         <link rel="stylesheet" type="text/css" href="/css/schema.min.css">
@@ -25,10 +24,10 @@
             <a href = "/index.html##projects">Back To Portfolio</a>
         </div>
         <div class = "schema">
-            <img src="/projects/swbs/icon-upscaled.png" class = "project-icons" alt = "SWBS Project Icon"><h1>SWBS Documentation</h1>
+            <img src="/projects/swbs/icon-upscaled-old.png" class = "project-icons" alt = "SWBS Project Icon"><h1>SWBS Documentation</h1>
             <p style = "margin-left: 5px;">Original <a href = "https://github.com/perpetualCreations/SWBS/blob/master/readme.md" target = "_blank">documentation available here</a>.</p>
             <div id="content">
-                <h4>A straight-forward wrapper for sending and receiving byte strings with sockets.</h4>
+                <p>A straight-forward wrapper for sending and receiving byte strings with sockets.</p>
                 <h3>Install</h3>
                 <p>Download the Python wheel file from the Github repository release, and install manually using:</p>
                 <p class = "code-block"><span class = "command">pip3 install</span> /path/to/wheel/file/here/swbs-1.0-py3-none-any.whl</p>
