--- a/index.html
+++ b/index.html
@@ -126,6 +126,14 @@
                     buy my roblox script injector at: admalona.tk
                     -->
                     <div class = "card update-card lazy">
+                        <h2>Update 1.14d</h2>
+                        <p>Project Update, March 21st, 2021</p>
+                        <h3>SWBS</h3>
+                        <p>Updated Socket Wrapper for Byte Strings (SBWS), with Sphinx documentation.</p>
+                        <h3>Bandage</h3>
+                        <p>Fixed issue with documentation.</p>
+                    </div>
+                    <div class = "card update-card lazy">
                         <h2>Update 1.14c</h2>
                         <p>Project Update, March 21st, 2021</p>
                         <h3>Raspbot</h3>
@@ -541,19 +549,19 @@
                     <img src = "/projects/swbs/project-icon-white.svg" alt = "SWBS Icon" style = "max-width: 50%;">
                     <h3>SWBS</h3>
                     <h4>Socket Wrapper for Byte Strings</h4>
-                    <p>Python3 package serving as a wrapper for the socket library.</p>
+                    <p>Python3 package serving as a wrapper for the socket library, with multi-client complexity or single-client simplicity when needed, and expandability for other developers.</p>
                     <hr>
                     <button class = "collapsible">Project Status</button>
                     <div class = "content">
                         <p>Project was completed and released.</p> 
                         <p>See Project Contents for documentation and product.</p>
-                        <p>Being updated for factory-style class structure.</p>
+                        <p>Updated March 23rd for new semantics and multi-client.</p>
                     </div>
                     <hr>
                     <button class = "collapsible">Project Notes</button>
                     <div class = "content">
-                        <p>Built to simplify projects that use sockets for sending strings and relatively small amounts of data. Reduces logic and prerequisites to a few straightforward functions.</p>
-                        <p>Derived from the Raspbot RCA's comms module, with modifcations.</p>
+                        <p>Reduces overhead from repeating code and prerequisites.</p>
+                        <p>Originally derived from the Raspbot RCA's comms module, with modifcations, now completely rewritten.</p>
                     </div>
                     <hr>
                     <button class = "collapsible">Project Contents</button>
@@ -561,7 +569,7 @@
                         <p>Project software is available on Github or PyPI, please see documentation for more details on usage. Access these pages below.</p>
                         <a rel="noreferrer" class = "button" href = "https://github.com/perpetualCreations/SWBS/" target = "_blank" style = "margin-top: 10px">Github</a>
                         <a rel="noreferrer" class = "button" href = "https://pypi.org/project/swbs/" target = "_blank" style = "margin-top: 10px">PyPI</a>
-                        <a class = "button" href = "/projects/swbs/docs.html" style = "margin-top: 10px; margin-bottom: 10px;">Documentation</a>
+                        <a class = "button" href = "/projects/swbs/docs/index.html" style = "margin-top: 10px; margin-bottom: 10px;">Documentation</a>
                     </div>
                     <hr>
                     <img src = "/projects/bandage/project-icon-white.svg" alt = "SWBS Icon" style = "max-width: 50%; transform: rotate(45deg);">
