--- a/projects/raspbot/docs.html
+++ b/projects/raspbot/docs.html
@@ -65,6 +65,7 @@
                     <p>This section requires the Arduino script generation tool. It can be found as a stand-alone Python script under releases, or under the "arduino" directory of the development repository.</p>
                     <p>Run the Arduino script generation tool, labeled <span class = "code-quote">tool.py</span>. You will be asked to provide a path to your hardware configuration file (i.e. <span class = "code-quote">C://Users//X//Raspbot RCA//client//hardware.cfg</span> or <span class = "code-quote">/home/X/Raspbot RCA/client/hardware.cfg</span>).</p>
                     <p>Please make sure you have edited your hardware configuration file prior, to match your installed hardware.</p>
+                    <p>If using a VL53L0X distance sensor in your hardware configuration, <a href= "https://github.com/pololu/vl53l0x-arduino/" target = "_blank">please use this compatible library</a>.</p>
                     <p>A script will be generated for uploading. To upload, plug the USB Type A plug on the USB A to USB B cable usually plugged into the Raspberry Pi into your computer and make sure the USB Type B plug is seated nicely into the Arduino's port.</p>
                     <p>Compile and upload the generated source file with your favorite editor. By default, the generated script file is for PlatformIO installations.</p>
                     <p>After uploading the script file, you may disconnect the Type A plug and plug it into the Raspberry Pi.</p>
