--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                         </div>
                         <h3>T. Chen</h3>
                         <p style = "font-size: 10px; color: white; margin: -1em 0em 3.5em;"><i>I despise physical activity and sleep is for the weak.</i></p>
-                        <p>I maintain and contribute to this site.</p>
-                        <p>I use perpetualCreations as my handlename. Sometimes I'll take pictures on errands or draw, they make nice backgrounds.</p>
+                        <p>I maintain and contribute to this site. My handlename is perpetualCreations.</p>
+                        <p>An outsider engineering student who spent too much time in humanities, the <a href = "/sketchbook/index.html">products of which are available in a sketchbook</a>.</p>
                         <p id = "opinion-text"></p>
                         <h4>Contacts:</h4>
                         <p>Email 1: tchen0584@gmail.com</p>
@@ -122,6 +122,20 @@
 
                     buy my roblox script injector at: admalona.tk
                     -->
+                    <div class = "card update-card">
+                        <h2>Update 1.14f</h2>
+                        <p>Project Update + Site Update, April 16th, 2021</p>
+                        <h3>SWBS</h3>
+                        <p>Updated SWBS to version 1.2.4.</p>
+                        <h3>Project KINETIC</h3>
+                        <p>Updated Project KINETIC to 1.0.1.</p>
+                        <h3>Raspbot</h3>
+                        <p>Updated gallery page to use newer stylesheet, images now use lazy loading to reduce render time and network load.</p>
+                        <h3>Site Updates</h3>
+                        <p>Updated sitemap.txt.txt for SEO.</p>
+                        <p>The "random flavortext" JS script has been updated with more excerpts.</p>
+                        <p>Added sketchbook page.</p>
+                    </div>
                     <div class = "card update-card">
                         <h2>Update 1.14e</h2>
                         <p>Project Update + Site Update, April 13th, 2021</p>
