Silent WIP, moved updates, edited index.

--- a/projects/raspbot/gallery.html
+++ b/projects/raspbot/gallery.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Raspbot documentation.">
         <meta name="keywords" content="perpetualCreations, dreamerslegacy, dreamer's legacy, dreamerslegacy.xyz, raspbot, raspbot gallery, raspbot photos">
-        <meta name="author" content="Taian Chen">
+        <meta name="author" content="perpetualCreations">
         <title>Raspbot Gallery</title>
         <link rel="preload" href="/css/newline.min.css" as="style">
         <link rel="preload" href="/css/schema.min.css" as="style">
