--- a/sketchbook/index.html
+++ b/sketchbook/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Project repository and portfolio.">
         <meta name="author" content="perpetualCreations">
-        <title>dreamerslegacy.xyz (Sketchbook)</title>
+        <title>dreamerslegacy.xyz - Sketchbook</title>
         <link rel="preload" href="/css/newline.min.css" as="style">
         <link rel="preload" href="/css/schema.min.css" as="style">
         <link rel="preload" href="/css/patch.min.css" as="style">
@@ -17,9 +17,6 @@
         <link rel="stylesheet" type="text/css" href="/css/schema.min.css">
         <link rel="stylesheet" type="text/css" href="/css/patch.min.css">
         <link rel="stylesheet" type="text/css" href="/css/anime.min.css">
-        <style>
-        /* inherits parent newline.min.css, schema.min.css, patch.min.css */
-        </style>
     </head>
     <script src = "/js/auto-fill-year-func.min.js"></script>
     <body onload = "autoFillYear();" class = "fade-in">
@@ -42,7 +39,7 @@
         </div>
         <div class = "schema">
             <div class = "row" style = "align-items: center;">
-                <img src="/resources/logo%20orange.svg" alt="dreamerslegacy.xyz logo" style="width: auto%;height: auto%;">
+                <img src="/resources/logo%20orange.svg" alt="dreamerslegacy.xyz logo" style="width: auto; height: auto;">
                 <h1>// Sketchbook</h1>
                 <a id = "#top" href="/sketchbook/index.html#top"></a><!-- this is an anchor for jumping to and from headers, it doesn't actually link to another page. -->
             </div>
