--- a/projects/raspbot/docs.html
+++ b/projects/raspbot/docs.html
@@ -5,11 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Documentation for Raspbot Project.">
         <title>Raspbot Documentation</title>
-        <link rel="preload" href="/css/newline.min.css" as="style">
         <link rel="preload" href="/css/schema.min.css" as="style">
         <link rel="preload" href="/projects/raspbot/icon-upscaled.png" as="image">
         <link rel="icon" href="/resources/favicon.ico">
-        <link rel="stylesheet" type="text/css" href="/css/newline.min.css">
         <link rel="stylesheet" type="text/css" href="/css/schema.min.css">
         <style>
 			img {
@@ -17,7 +15,7 @@
 				}
         </style>
     </head>
-    <body> 
+    <body class="fade-in">
         <!-- Maybe you should read the actual page instead of looking at HTML and wrongly expanding your ego. -->
         <div class = "topnav">
             <a href = "/index.html##projects">Back To Portfolio</a>
