--- a/sketchbook/index.html
+++ b/sketchbook/index.html
@@ -6,20 +6,14 @@
         <meta name="description" content="Project repository and portfolio.">
         <meta name="author" content="perpetualCreations">
         <title>dreamerslegacy.xyz - Sketchbook</title>
-        <link rel="preload" href="/css/newline.min.css" as="style">
         <link rel="preload" href="/css/schema.min.css" as="style">
-        <link rel="preload" href="/css/patch.min.css" as="style">
-        <link rel="preload" href="/css/anime.min.css" as="style">
         <link rel="preload" href="/js/auto-fill-year-func.min.js" as="script">
         <link rel="preload" href="/resources/logo%20orange.svg" as="image">
         <link rel="icon" href="/resources/favicon.ico">
-        <link rel="stylesheet" type="text/css" href="/css/newline.min.css">
         <link rel="stylesheet" type="text/css" href="/css/schema.min.css">
-        <link rel="stylesheet" type="text/css" href="/css/patch.min.css">
-        <link rel="stylesheet" type="text/css" href="/css/anime.min.css">
     </head>
-    <script src = "/js/auto-fill-year-func.min.js"></script>
-    <body onload = "autoFillYear();" class = "fade-in">
+    <script src="/js/auto-fill-year-func.min.js"></script>
+    <body onload="autoFillYear();" class="fade-in">
         <!--
         TELL ME.
         0█0█0███ 0██0█000 0██00█0█ 0██0███0 00█00000 0████00█ 0██00█0█ 0███00██ 
@@ -34,22 +28,22 @@
         00█00000 0██0██0█ 0██0█00█ 0██00█00 0██0███0 0██0█00█ 0██00███ 0██0█000 
         0███0█00 00█00000 0██00█00 0███00█0 0██00█0█ 0██0000█ 0██0██0█ 00█0███0 
         -->
-        <div class = "topnav">
-            <a href = "/index.html#top">Back To Portfolio</a>
+        <div class="topnav">
+            <a href="/index.html#top">Back To Portfolio</a>
         </div>
-        <div class = "schema">
-            <div class = "row" style = "align-items: center;">
+        <div class="schema">
+            <div class="row" style="align-items: center;">
                 <img src="/resources/logo%20orange.svg" alt="dreamerslegacy.xyz logo" style="width: auto; height: auto;">
                 <h1>// Sketchbook</h1>
-                <a id = "#top" href="/sketchbook/index.html#top"></a><!-- this is an anchor for jumping to and from headers, it doesn't actually link to another page. -->
+                <a id="#top" href="/sketchbook/index.html#top"></a><!-- this is an anchor for jumping to and from headers, it doesn't actually link to another page. -->
             </div>
-            <div style = "display: flex; justify-content: center; align-items: center; padding-top: 5%; padding-bottom: 5%;"> <!-- it took me 3 minutes, yes, but add it to the main stylesheets someday, it seems useful elsewhere -->
-                <div style = "border: 0.1rem solid white; padding-left: 30%; padding-right: 30%; padding-top: 1%; padding-bottom: 1%;">
+            <div style="display: flex; justify-content: center; align-items: center; padding-top: 5%; padding-bottom: 5%;"> <!-- it took me 3 minutes, yes, but add it to the main stylesheets someday, it seems useful elsewhere -->
+                <div style="border: 0.1rem solid var(--outline-color); padding-left: 30%; padding-right: 30%; padding-top: 1%; padding-bottom: 1%;">
                     <p>|!| There is nothing here. Turn back.</p>
                 </div>
             </div>    
         </div>
-        <p class = "footer-text" id = "year-footer-text"></p>
-        <script src = "/js/collapse.min.js"></script>
+        <p class="footer-text" id="year-footer-text"></p>
+        <script src="/js/collapse.min.js"></script>
     </body>
 </html>
