--- a/html/pleaseno.html
+++ b/html/pleaseno.html
@@ -1,33 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Error: Gone (410)</title>
-        <link rel="preload" href="/css/main.css" as="style">
-        <link rel="icon" href="/resources/homeIcon-favicon.ico">
-        <link rel="stylesheet" type="text/css" href="/css/main.css">
-        <style>
-            body {
-                background-color: white;
-                padding-left: 40px;
-                }
-            @media screen and (max-width: 900px) {
-                  .column {
-                    width: 50%;
-                  }
-                }
-        </style>
+        <link rel="preload" href="/css/error.min.css" as="style">
+        <link rel="preload" href="/js/auto-fill-year.min.js" as="script">
+        <link rel="icon" href="/resources/favicon.ico">
+        <link rel="stylesheet" type="text/css" href="/css/error.min.css">
     </head>
     <body>
         <!-- Okay this isn't funny anymore, this is serious. -->
-        <h1 style = "text-align: left;">// Error 410, N/A</h1>
+        <h1>// Error 410</h1>
         <h3><i>Client-Side Issue, Gone</i></h3>
         <hr>
         <p>Requested resource was removed, and no longer is available. This is not inherently an error.</p>
         <p>If needed, please open an issue at the Github repository (will require an account), or email skynetserver.god@protonmail.com.</p>
-        <a class = "button" href = "/index.html">Return Home</a> <a class = "button" style = "color: orange;" href= "https://github.com/perpetualCreations/dreamerslegacy-site/issues/new" target="_blank">Open Issue</a>
-        <p class = "footer-text" id = "year-footer-text" style = "color: black;padding-top: 50px;"></p>
-        <script src = "/js/auto-fill-year.min.js"></script>
+        <a class="button" href="/index.html">Return Home</a> <a class="button" style="color: orange;" href= "https://github.com/perpetualCreations/dreamerslegacy-site/issues/new" target="_blank">Open Issue</a>
+        <p class="footer-text" id="year-footer-text" style="color: black;padding-top: 50px;"></p>
+        <script src="/js/auto-fill-year.min.js"></script>
     </body>
 </html>
