Update 1.15 * Updated documentation, again, just in case. * Update message. * Vertical line decorators. * Other small tweaks that got buried under the doc update changelist.

--- a/html/updates.html
+++ b/html/updates.html
@@ -42,8 +42,32 @@
 
                     buy my roblox script injector at: roblox.script.injector.mm.my
                     -->
+                    <div class="card row">
+                        <div class="column" style="flex: 1%;">
+                            <div class="deco_vertical" style="border-color: #fe8019;"></div>
+                        </div>
+                        <div class="column" style="flex: 95%;">
+                            <h2>Feed</h2>
+                        </div>
+                    </div>
                     <div class="card">
-                        <h2>Feed</h2>
+                        <h2>Update 1.15</h2>
+                        <p>Project Update + Site Update, April 16th, 2021</p>
+                        <h3>All (*) Projects</h3>
+                        <p>If applicable, updated builds to the latest documentation version.</p>
+                        <h3>Site Updates</h3>
+                        <ul>
+                            <li>Moved updates to a separate page for reduced render time and network load (reduces the size of index requests by tens of kilobytes).</li>
+                            <li>Deprecated the original legacy main.css. <span class="hint">Bid adieu, we will miss you.</span></li>
+                            <li>Changed aboutRandom.js, repeated string is appended to display instead of included in list, reducing list size, added two "opinions" to the list.</li>
+                            <li>Consolidated stylesheets into SCHEMA.css, deprecated unused classes.</li>
+                            <li>Changed stylesheet color scheme, <del>ripped from</del> inspired by the <a href="https://github.com/morhetz/gruvbox" referrerpolicy="noreferrer" target="_blank">original Gruvbox <i>vi</i> theme</a> and a <a href="https://github.com/jdinhify/vscode-theme-gruvbox/" referrerpolicy="noreferrer" target="_blank">VSCode Gruvbox port</a>.</li>
+                            <li>Patched calendar-dark.css (overwrites styling for Github Calendar) to use new colors.</li>
+                            <li>Standardized colors with variables, in SCHEMA.css (that comment from 1.14f didn't go unnoticed).</li>
+                            <li>Added colored vertical decorators.</li>
+                            <li>Minor fixes, mainly syntax.</li>
+                        </ul>
+                        <p>Future updates will be list format when sections are multi-item.</p>
                     </div>
                     <div class="card">
                         <h2>Update 1.14f</h2>
