--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="preload" href="/resources/logo%20orange.svg" as="image">
         <link rel="icon" href="/resources/favicon.ico">
         <link rel="stylesheet" type="text/css" href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css" referrerpolicy="noreferrer">
-        <link rel="stylesheet" type="text/css" href="/css/schema.min.css">
+        <link rel="stylesheet" type="text/css" href="/css/schema.css">
         <link rel="stylesheet" type="text/css" href="/css/calendar-dark.min.css">
     </head>
     <script src="/js/about-random.min.js"></script>
@@ -33,12 +33,17 @@
                         <h2>About</h2>
                         <hr>
                     </div>
-                    <div class="card">
-                        <p>Portfolio site featuring technical projects and a sketchbook.</p>
-                        <hr>
-                        <p>Current runtime; about 2 years (development started December 1st, 2018), through multiple design iterations.</p>
-                        <p>The source code and assets for this portfolio is available <a rel="noreferrer" href="https://github.com/perpetualCreations/dreamerslegacy-site" target="_blank">on Github.</a> The old repository was privated after sensitive information was found to have been leaked into commits spanning over several months. Before being closed it had 65 commits, and was started on November 29th, 2019. Repository migration completed on December 3rd, 2020.</p>
-                        <hr>
+                    <div class="card row">
+                        <div class="column" style="flex: 1%;">
+                            <div class="deco_vertical" style="border-color: #fabd2f;"></div>
+                        </div>
+                        <div class="column" style="flex: 95%;">
+                            <p>Portfolio site featuring technical projects and a sketchbook.</p>
+                            <hr>
+                            <p>Current runtime; about 2 years (development started December 1st, 2018), through multiple design iterations.</p>
+                            <p>The source code and assets for this portfolio is available <a rel="noreferrer" href="https://github.com/perpetualCreations/dreamerslegacy-site" target="_blank">on Github.</a> The old repository was privated after sensitive information was found to have been leaked into commits spanning over several months. Before being closed it had 65 commits, and was started on November 29th, 2019. Repository migration completed on December 3rd, 2020.</p>
+                            <hr>
+                        </div>
                     </div>
                     <div class="card">
                         <img src="/resources/avatars/pc.webp" class="avatar" alt="Avatar Image for perpetualCreations">
@@ -54,13 +59,18 @@
                         <p>Github: <a rel="noreferrer" href="https://github.com/perpetualCreations" target="_blank">perpetualCreations</a></p>
                         <hr>
                     </div>
-                    <div class="card">
-                        <h3>Hosting</h3>
-                        <hr>
-                        <p>Formerly on cloud hosting, now on a dedicated local server.</p>
-                        <p>Domain name vendor was previously <a rel="noreferrer" href="https://freedns.afraid.org/" target="_blank">freedns.afraid.org</a>, site has since moved to a full-fledged domain.</p>
-                        <p>The site SSL certificate is provided by <a rel="noreferrer" href="https://letsencrypt.org/" target="_blank">LetsEncrypt</a>.</p>
-                        <hr>
+                    <div class="card row">
+                        <div class="column" style="flex: 1%;">
+                            <div class="deco_vertical" style="border-color: #fb4934;"></div>
+                        </div>
+                        <div class="column" style="flex: 95%;">
+                            <h3>Hosting</h3>
+                            <hr>
+                            <p>Formerly on cloud hosting, now on a dedicated local server.</p>
+                            <p>Domain name vendor was previously <a rel="noreferrer" href="https://freedns.afraid.org/" target="_blank">freedns.afraid.org</a>, site has since moved to a full-fledged domain.</p>
+                            <p>The site SSL certificate is provided by <a rel="noreferrer" href="https://letsencrypt.org/" target="_blank">LetsEncrypt</a>.</p>
+                            <hr>
+                        </div>
                     </div>
                     <div class="card">
                         <a class="button" href="#top" style="margin-right:1%;">Jump to Top</a>
@@ -81,12 +91,17 @@
                         <p style="font-size: 0.8em;">Down? Github probably changed how the calendar is rendered, again. It'll be a bit until the scraper is updated to handle the new changes.</p>
                         <hr>
                     </div>
-                    <div class="card">
-                        <h2>Updates</h2>
-                        <hr>
-                        <a class="button" href="/html/updates.html">View Updates</a>
-                        <p>Contains site changelogs and project reports, spanning from November of 2019 to present.</p>
-                        <hr>
+                    <div class="card row">
+                        <div class="column" style="flex: 1%;">
+                            <div class="deco_vertical" style="border-color: #fe8019;"></div>
+                        </div>
+                        <div class="column" style="flex: 95%;">
+                            <h2>Updates</h2>
+                            <hr>
+                            <a class="button" href="/html/updates.html">View Updates</a>
+                            <p>Contains site changelogs and project reports, spanning from November of 2019 to present.</p>
+                            <hr>
+                        </div>
                     </div>
                     <div class="card">
                         <a id="##ppa" href="index.html###ppa"></a><!-- this is an anchor for jumping to and from headers, it doesn't actually link to another page. -->
